# scada-model

./: .gitignore  EquipmentList.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api_openapi.yaml
models/: scada-model.schema.json  scada_model_json.json  scada_model_json_template.json
src/app/: main.py
src/services/: checklist.py  validation.py
src/tests/: test_validation.py
