[project]
name = "scada-design-assistant"
version = "0.1.0"
description = "Web tool to generate SCADA design checklists from a JSON model"
readme = "README.md"
authors = [{ name = "Jared McLaughlin", email = "jmclaughlin@burnsmcd.com" }]
requires-python = ">=3.9"

# ---- RUNTIME DEPENDENCIES (array‑of‑strings) -------------
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "jsonschema",
]

# ---- POETRY‑SPECIFIC SETTINGS ----------------------------
[tool.poetry]
packages = [{ include = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
black = "*"
ruff = "*"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

